<resources>
    <string name="app_name">JJTank</string>
    <string name="fire_button_name">Fire</string>
    <string name="turret_left_button_name">Left</string>
    <string name="turret_right_button_name">Right</string>
    <string name="turret_up_button_name">Up</string>
    <string name="turret_down_button_name">Down</string>
    <string name="bluetooth_indicator_name">Bluetooth</string>
    <string name="ble_not_supported">Bluetooth LE not supported</string>
    <string name="connected">Connected</string>
    <string name="disconnected">Disconnected</string>
    <string name="no_data">No data</string>
    <string name="title_location_permission">Need location permission</string>
    <string name="text_location_permission">Please grant location permission to use bluetooth</string>
    <string name="ok">OK</string>

</resources>
